<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/my_inf"
                android:text="@string/personal_information"/>

            <EditText
                style="@style/my_text"
                android:hint="@string/first_name"
                android:inputType="text" />

            <EditText
                style="@style/my_text"
                android:hint="@string/last_name"
                android:inputType="text" />

            <EditText
                style="@style/my_text"
                android:hint="@string/middle_name"
                android:inputType="text" />

            <LinearLayout
                style="@style/my_linear"
                android:orientation="vertical">
                <TextView
                    style="@style/my_text"
                    android:id="@+id/age"
                    android:hint="@string/age"
                    android:inputType="number"/>
                <SeekBar
                    android:id="@+id/age_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                style="@style/my_text"
                android:hint="@string/number_of_group"
                android:inputType="text" />

            <EditText
              style="@style/my_text"
                android:hint="@string/fak"
               android:inputType="text" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow>
                <TextView
                    style="@style/my_inf"
                    android:text="@string/personal_information"/>
            </TableRow>


            <TableRow>
                <EditText
                    style="@style/my_text"
                    android:hint="@string/first_name"
                    android:inputType="text" />
            </TableRow>

            <TableRow>
                <EditText
                    style="@style/my_text"
                    android:hint="@string/last_name"
                    android:inputType="text" />
            </TableRow>

            <TableRow>
                <EditText
                    style="@style/my_text"
                    android:hint="@string/middle_name"
                    android:inputType="text" />
            </TableRow>

            <TableRow>
                <EditText
                    style="@style/my_text"
                    android:hint="@string/number_of_group"
                    android:inputType="text" />
            </TableRow>

            <TableRow>
                <EditText
                    style="@style/my_text"
                    android:hint="@string/fak"
                    android:inputType="text" />
            </TableRow>
        </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/info"
                style="@style/my_inf"
                android:text="@string/personal_information"/>

            <EditText
                android:id="@+id/first"
                style="@style/my_text"
                android:hint="@string/first_name"
                android:inputType="text"
                android:layout_below="@+id/info"/>

            <EditText
                android:id="@+id/last"
                style="@style/my_text"
                android:hint="@string/last_name"
                android:inputType="text"
                android:layout_below="@+id/first"/>

            <EditText
                android:id="@+id/middle"
                style="@style/my_text"
                android:hint="@string/middle_name"
                android:inputType="text"
                android:layout_below="@+id/last"/>

            <EditText
                android:id="@+id/number"
                style="@style/my_text"
                android:hint="@string/number_of_group"
                android:inputType="number"
                android:layout_below="@+id/middle"/>

            <EditText
                android:id="@+id/fak"
                style="@style/my_text"
                android:hint="@string/fak"
                android:inputType="text"
                android:layout_below="@+id/number"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>